[Splunk] Update system error msg

--- a/cac/adm/splunk/rca/error_config.json
+++ b/cac/adm/splunk/rca/error_config.json
@@ -373,6 +373,7 @@
             "there are no nodes": "System Error",
             "error: the process \"python.exe\" not found": "System Error",
             "no space left on device": "System Error",
+            "preauthentication failed while getting initial credentials": "System Error",
             "java.io.ioexception: unable to create live filepath": "System Error"
         },
         
