--- a/cac/adm/splunk/rca/error_config.json
+++ b/cac/adm/splunk/rca/error_config.json
@@ -443,7 +443,8 @@
             "error: script returned exit code 1",
             "java.io.ioexception: could not checkout",
             "warn : problem with id",
-            "failed with --ignore mode enabled"
+            "failed with --ignore mode enabled",
+            "kconflicting types for â"
         ]
     }
 }
