--- a/cac/adm/splunk/rca/error_config.json
+++ b/cac/adm/splunk/rca/error_config.json
@@ -254,7 +254,7 @@
             "http/1.1: connection reset by peer: socket write error": "Application Error: Artifactory",
             "http/1.1: read timed out": "Connectivity Error: Artifactory",
             "http/1.1. received status code 503 and message: service temporarily Unavailable": "Connectivity Error: Artifactory",
-            "error occurred for request ": "Application Error: Artifactory",
+            "error occurred for request ": "Connectivity Error: Artifactory",
             "failed to deploy file. status code: 502": "Connectivity Error: Artifactory",
             "failed to deploy file. status code: 401": "Connectivity Error: Artifactory",
             "failed to deploy file. status code: 403": "Connectivity Error: Artifactory",
