[SPLUNK] Misc. error for KW updated

--- a/cac/adm/splunk/rca/error_config.json
+++ b/cac/adm/splunk/rca/error_config.json
@@ -444,7 +444,9 @@
             "java.io.ioexception: could not checkout",
             "warn : problem with id",
             "failed with --ignore mode enabled",
-            "kconflicting types for â"
+            "kconflicting types for â",
+            "non-zero exit code of the clef",
+            "non-zero exit code of the kwcc"
         ]
     }
 }
