Added new first level error for kwadmin

--- a/cac/adm/splunk/rca/error_config.json
+++ b/cac/adm/splunk/rca/error_config.json
@@ -95,7 +95,8 @@
             "gitlab error",
             "error is not recoverable",
             "hsdes id is not given",
-            "kwinject: not found"
+            "kwinject: not found",
+            "kwadmin: "
         ],
         
         "error_category": {
