updated rca config

--- a/cac/adm/splunk/rca/error_config.json
+++ b/cac/adm/splunk/rca/error_config.json
@@ -99,7 +99,8 @@
             "error: invalid requirement",
             "kwdeploy: connection to",
             "kwadmin: ",
-            "errorlevel=1"
+            "errorlevel=1",
+            "file \"vscanner.py\", line",
         ],
         
         "error_category": {
@@ -383,7 +384,10 @@
             "no space left on device": "System Error",
             "preauthentication failed while getting initial credentials": "System Error",
             "disk quota exceeded": "System Error",
-            "java.io.ioexception: unable to create live filepath": "System Error"
+            "java.io.ioexception: unable to create live filepath": "System Error",
+            
+            "This is a comment which were used to segmentized the JSON for error category. It is impossible this line will match any error mesg": "Virus Scan Error",
+            "file \"vscanner.py\", line": "Configuration Error: Virus Scan"
         },
         
         "patterns": [
