[SPLUNK] Syntax error correction

--- a/cac/adm/splunk/rca/error_config.json
+++ b/cac/adm/splunk/rca/error_config.json
@@ -100,7 +100,7 @@
             "kwdeploy: connection to",
             "kwadmin: ",
             "errorlevel=1",
-            "file \"vscanner.py\", line",
+            "file \"vscanner.py\", line"
         ],
         
         "error_category": {
