--- a/cac/adm/splunk/rca/error_config.json
+++ b/cac/adm/splunk/rca/error_config.json
@@ -100,7 +100,8 @@
             "kwdeploy: connection to",
             "kwadmin: ",
             "errorlevel=1",
-            "file \"vscanner.py\", line"
+            "file \"vscanner.py\", line",
+            "no such file or directory"
         ],
         
         "error_category": {
@@ -292,7 +293,7 @@
             "error occurred during build: could not connect to https://klocwork": "Connectivity Error: Klocwork",
             "returned non-zero exit status 1": "Connectivity Error: Klocwork",
             "kwdeploy: connection to": "Connectivity Error: Klocwork",
-			"failed with --ignore mode enabled. please check": "Connectivity Error: Klocwork",
+            "failed with --ignore mode enabled. please check": "Connectivity Error: Klocwork",
             
             "This is a comment which were used to segmentized the JSON for error category. It is impossible this line will match any error mesg": "Jenkins Related Error",
             "couldn't find any revision to build": "Configuration Error: Jenkins",
