--- a/cac/adm/splunk/rca/error_config.json
+++ b/cac/adm/splunk/rca/error_config.json
@@ -101,7 +101,8 @@
             "kwadmin: ",
             "errorlevel=1",
             "file \"vscanner.py\", line",
-            "no such file or directory"
+            "no such file or directory",
+            "SyntaxError"
         ],
         
         "error_category": {
@@ -214,6 +215,7 @@
             "error 404: not found": "Developer Error: Compilation",
             "http error 404 client error: not found for url": "Developer Error: Compilation",
             "errorlevel=1": "Developer Error: Compilation",
+            "SyntaxError: invalid syntax": "Developer Error: Compilation",
             
             "This is a comment which were used to segmentized the JSON for error category. It is impossible this line will match any error mesg": "Git Related Error",
             "gitlab error": "Application Error: Git",
