Updated RCA config

--- a/cac/adm/splunk/rca/error_config.json
+++ b/cac/adm/splunk/rca/error_config.json
@@ -102,7 +102,7 @@
             "errorlevel=1",
             "file \"vscanner.py\", line",
             "no such file or directory",
-            "SyntaxError"
+            "syntaxerror"
         ],
         
         "error_category": {
@@ -215,7 +215,7 @@
             "error 404: not found": "Developer Error: Compilation",
             "http error 404 client error: not found for url": "Developer Error: Compilation",
             "errorlevel=1": "Developer Error: Compilation",
-            "SyntaxError: invalid syntax": "Developer Error: Compilation",
+            "syntaxerror: invalid syntax": "Developer Error: Compilation",
             
             "This is a comment which were used to segmentized the JSON for error category. It is impossible this line will match any error mesg": "Git Related Error",
             "gitlab error": "Application Error: Git",
