[SPLUNK] HSDES Error updated

--- a/cac/adm/splunk/rca/error_config.json
+++ b/cac/adm/splunk/rca/error_config.json
@@ -358,9 +358,8 @@
             "keyerror:": "Application Error: HSDES",
             "hsdes id is not given": "Developer Error: HSDES",
             "hsdes id is invalid": "Developer Error: HSDES",
-            "hsdes id is is not belong to iot_platf tenant": "Developer Error: HSDES",
+            "hsdes id is not belong to iot_platf tenant": "Developer Error: HSDES",
             "please use ; for multiple hsdes id": "Developer Error: HSDES",
-            "hsdes id is not given or in a wrong format": "Developer Error: HSDES",
             
             "ABI RELATED ERROR": "ABI Related Error",
             
